[Spring 지하철 노선도 - 1,2단계] 이프(송인봉) 미션 제출합니다. (#233)
* docs: 기능 구현 목록 작성

* refactor: StationDao static 제거

* feat: StationDao 테스트 작성 및 삭제 기능 추가

* refactor: StationDao의 save()가 id를 반환하도록 변경

* feat: LineDao CRUD 기능 구현 및 테스트

* feat: StationService 계층 분리 및 지하철 역 이름 중복 예외 처리

* refactor: 계층 별 dto 분리

* feat: LineService 구현 및 테스트

* feat: LineController 구현 및 인수 테스트

* refactor: 공통 URI prefix 분리

* refactor: 스프링 빈 적용하기

* style: 코드 컨벤션 정리

* chore: h2 datasource 및 ddl 작성

* chore: application.properties datasource.url 변경 및 h2 ddl 수정

* feat: Dao 인터페이스 분리 및 JdbcDao 생성

* style: 사용하지 않는 import문 제거

* feat: 지하철 역 색상 중복 예외 처리

* feat: Controller-Service 계층간 dto 분리 및 DtoAssembler 생성

* chore: ddl unique 속성 추가

* refactor: LineService#update 반환값 제거

* style: reformat code

* test: LineAcceptanceTest 인수테스트 리팩터링

* test: StationAcceptanceTest 인수테스트 리팩터링

* refactor: LineService#findAll 메서드명 변경

* refactor: StationService#findAll 메서드명 변경

* test: 실패한 테스트 통과되도록 수정

* style: 의미없는 개행 제거

* refactor: LineController, StationController 행 분리

* test: AcceptanceHandler 클래스를 통한 Acceptance 인수테스트 중복 제거

* refactor: JdbcTemplate 구현체 사용을 통한 JdbcLineDao 리팩터링

* NamedParameterJdbcTemplate 사용
* SimpleJdbcInsert 사용

* refactor: JdbcTemplate 구현체 사용을 통한 JdbcStationDao 리팩터링

* NamedParameterJdbcTemplate 사용
* SimpleJdbcInsert 사용

* refactor: JdbcStationDao#existsByName 리팩터링

* refactor: JdbcLineDao#existsByName 리팩터링

* refactor: JdbcLineDao#existsByColor 리팩터링

* refactor: JdbcStationDao RowMapper를 통한 중복 코드 제거

* refactor: JdbcLineDao RowMapper를 통한 중복 코드 제거

* style: 파일 마지막 개행 추가

* test: 인수테스트 실패 해결을 위한 schema.sql 수정

Co-authored-by: DOES <ldk980130@gmail.com>